# suraksha-desk

./: README.md
apps/api/: .gitignore  pyproject.toml  requirements.txt
apps/api/app/: api_incidents.py  main.py  schemas.py  services_classification.py
apps/web/app/: page.tsx
docs/: architecture.md  compliance-boundaries.md  product-spec.md  routing-matrix.md
docs/user-journeys/: email-job-scam.md  password-theft-account-takeover.md  whatsapp-job-scam.md
