[project]
name = "suraksha-desk-api"
version = "0.1.0"
description = "Suraksha Desk API - incident-centric backend for cyber incident assistance"
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.95.2",
  "uvicorn==0.22.0",
  "pydantic==1.10.14"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
]
